corrected some size on smaller screens

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ nav a:hover {
   background:var(--light-color);
   color:black;
   text-align: center;
-  width:80%;
+  width:90%;
   max-width: 850px;
   box-shadow:0 0 30px rgba(0, 0, 0, 0.5) ;
 }
